--- a/process/css/_base.css
+++ b/process/css/_base.css
@@ -42,7 +42,7 @@ ul li {
   margin-left: 1rem;
 }
 
-h1,h2,h3,h4,h5,h6 {
+:--headings {
   font-weight: var(--font-weight-medium);
   margin-top: 0;
   margin-bottom: 1rem;
