--- a/process/css/_base.css
+++ b/process/css/_base.css
@@ -17,7 +17,7 @@ body {
   margin: 0;
 }
 
-a {
+a:any-link {
   color: var(--color-links);
   font-weight: var(--font-weight-medium);
   text-decoration: none;
@@ -46,4 +46,13 @@ ul li {
   font-weight: var(--font-weight-medium);
   margin-top: 0;
   margin-bottom: 1rem;
+}
+
+:--headings:matches(.feature-description-headline) {
+  color: var(--green);
+}
+
+.feature:not(#history, #ask) {
+  background: var(--darkblue);
+  padding: 30px;
 }
