--- a/process/css/_variables.css
+++ b/process/css/_variables.css
@@ -36,5 +36,10 @@
     margin: 0 auto;
   }
 
+  @custom-media --viewport-small (width >= 576px);
+  @custom-media --viewport-medium (width >= 768px);
+  @custom-media --viewport-large (width >= 992px);
+  @custom-media --viewport-extralarge (width >= 1200px);  
+
   @custom-selector :--headings h1, h2, h3, h4, h5, h6;
 } /* root */
