--- a/process/css/_header.css
+++ b/process/css/_header.css
@@ -15,23 +15,57 @@
   & .header-info {
     width: 100%;
     text-align: center;
+    margin-bottom: 30px;
 
     & .header-info-headline {
-      font-size: calc(var(--font-size-base)*2.5);
+      font-size: calc(var(--font-size-base)*2.2);
       @apply --width-standard;
+
+      @media (--viewport-small) {
+        font-size: calc(var(--font-size-base)*2.5);
+      }/* viewport-small */
+
+      @media (--viewport-large) {
+        font-size: calc(var(--font-size-base)*3.5);
+      }/* viewport-large */
     } /* header-info-headline */
 
     & .header-info-subheadline {
-      font-size: calc(var(--font-size-base)*1.5);
+      font-size: calc(var(--font-size-base)*1.2);
       @apply --width-standard;
+
+      @media (--viewport-medium) {
+        font-size: calc(var(--font-size-base)*1.5);
+      }/* viewport-medium */
+
+      @media (--viewport-large) {
+        font-size: calc(var(--font-size-base)*1.8);
+      }/* viewport-large */
     }/* header-info-subheadline */
 
     & .header-info-text {
       @apply --width-standard;
+      display: none;
 
-      & a:any-link {
-        font-size: calc(var(--font-size-base)*1.7);
-      } /* a:any-link */
+      @media (--viewport-small) {
+        display: block;
+        font-size: calc(var(--font-size-base)*.9);
+        line-height: calc(var(--line-height-base)*.9);
+
+        & a:any-link {
+          font-size: calc(var(--font-size-base)*1.2);
+        } /* a:any-link */
+      }/* viewport-small */
+
+      @media (--viewport-large) {
+        font-size: calc(var(--font-size-base)*1.2);
+        line-height: calc(var(--line-height-base)*1.1);
+
+        & a:any-link {
+          font-size: calc(var(--font-size-base)*1.7);
+        } /* a:any-link */
+      }/* viewport-large */
+
     }/* header-info-text */
   } /* header-info */
 } /* header */
