--- a/process/css/_features.css
+++ b/process/css/_features.css
@@ -15,6 +15,7 @@
     @media(--viewport-medium) {
       transform: rotateZ(15deg) scale(.8);
       animation: videoin 1s;
+      animation-play-state: paused;
     }
   }/* .feature-phone */
 
@@ -66,6 +67,7 @@
       & .feature-phone {
         transform: rotateZ(-15deg) scale(.8);
         animation: videoin-reverse 1s;
+        animation-play-state: paused;
       } /* .feature-phone */
 
       & .feature-description-headline {
